// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/initialOption > should tokenize flags string ("--command [!...]") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--command",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--command",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--command",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--command",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": true,
      "required": false,
      "serialized": "[!...]",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "[!...]",
      "variadic": true,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": true,
      "required": false,
      "serialized": "[!...]",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "[!...]",
      "variadic": true,
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize flags string ("--letter <...>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--letter",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--letter",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--letter",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--letter",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": false,
      "required": true,
      "serialized": "<...>",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<...>",
      "variadic": true,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": false,
      "required": true,
      "serialized": "<...>",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<...>",
      "variadic": true,
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize flags string ("--mode <mode>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--mode",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--mode",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--mode",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--mode",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "mode",
      "mandatory": false,
      "required": true,
      "serialized": "<mode>",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<mode>",
      "variadic": false,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "mode",
      "mandatory": false,
      "required": true,
      "serialized": "<mode>",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<mode>",
      "variadic": false,
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize flags string ("--number [value...]") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--number",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--number",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--number",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--number",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "value",
      "mandatory": false,
      "required": false,
      "serialized": "[value...]",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "[value...]",
      "variadic": true,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "value",
      "mandatory": false,
      "required": false,
      "serialized": "[value...]",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "[value...]",
      "variadic": true,
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize flags string ("--parent <!>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--parent",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--parent",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--parent",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--parent",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": true,
      "required": true,
      "serialized": "<!>",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<!>",
      "variadic": false,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": true,
      "required": true,
      "serialized": "<!>",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<!>",
      "variadic": false,
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize flags string ("--ps --preserve-symlinks") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--ps",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--ps",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--preserve-symlinks",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--preserve-symlinks",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--preserve-symlinks",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--preserve-symlinks",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize flags string ("--resolve.conditions <condition!...>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--resolve.conditions",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--resolve.conditions",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--resolve.conditions",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--resolve.conditions",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 36,
        "offset": 35,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "condition",
      "mandatory": true,
      "required": true,
      "serialized": "<condition!...>",
      "start": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<condition!...>",
      "variadic": true,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 36,
        "offset": 35,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "condition",
      "mandatory": true,
      "required": true,
      "serialized": "<condition!...>",
      "start": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<condition!...>",
      "variadic": true,
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize flags string ("--sr, --sourceRoot <>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--sr",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--sr",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--sr",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--sr",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--sourceRoot",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--sourceRoot",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--sourceRoot",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--sourceRoot",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": false,
      "required": true,
      "serialized": "<>",
      "start": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<>",
      "variadic": false,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": false,
      "required": true,
      "serialized": "<>",
      "start": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<>",
      "variadic": false,
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize flags string ("--ws, --workspace []") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--ws",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ws",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--ws",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ws",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--workspace",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--workspace",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--workspace",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--workspace",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": false,
      "required": false,
      "serialized": "[]",
      "start": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "[]",
      "variadic": false,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "id": "",
      "mandatory": false,
      "required": false,
      "serialized": "[]",
      "start": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "[]",
      "variadic": false,
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize flags string ("-T | --token <token>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-T",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-T",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-T",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-T",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--token",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--token",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "long": true,
      "serialized": "--token",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--token",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "id": "token",
      "mandatory": false,
      "required": true,
      "serialized": "<token>",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<token>",
      "variadic": false,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "id": "token",
      "mandatory": false,
      "required": true,
      "serialized": "<token>",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "argtax",
      "value": "<token>",
      "variadic": false,
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize long flag ("---gnu-style-hidden-option") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 27,
        "offset": 26,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "---gnu-style-hidden-option",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "---gnu-style-hidden-option",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 27,
        "offset": 26,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "---gnu-style-hidden-option",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "---gnu-style-hidden-option",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize long flag ("--13") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--13",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--13",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--13",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--13",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize long flag ("--TZ") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--TZ",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--TZ",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--TZ",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--TZ",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize long flag ("--esbuild.jsxDev") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--esbuild.jsxDev",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--esbuild.jsxDev",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--esbuild.jsxDev",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--esbuild.jsxDev",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize long flag ("--force") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--force",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--force",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--force",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--force",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize long flag ("--ps") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--ps",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "serialized": "--ps",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-0") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-0",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-0",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-0",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-0",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-1") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-1",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-1",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-1",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-1",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-2") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-2",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-2",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-2",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-2",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-3") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-3",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-3",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-3",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-3",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-4") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-4",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-4",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-4",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-4",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-5") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-5",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-5",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-5",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-5",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-6") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-6",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-6",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-6",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-6",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-7") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-7",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-7",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-7",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-7",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-8") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-8",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-8",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-8",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-8",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-9") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-9",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-9",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-9",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-9",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-A") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-A",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-A",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-A",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-A",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-B") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-B",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-B",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-B",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-B",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-C") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-C",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-C",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-C",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-C",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-D") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-D",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-D",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-D",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-D",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-E") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-E",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-E",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-E",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-E",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-F") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-F",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-F",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-F",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-F",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-G") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-G",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-G",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-G",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-G",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-H") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-H",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-H",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-H",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-H",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-I") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-I",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-I",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-I",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-I",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-J") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-J",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-J",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-J",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-J",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-K") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-K",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-K",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-K",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-K",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-L") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-L",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-L",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-L",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-L",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-M") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-M",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-M",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-N") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-N",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-N",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-N",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-N",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-O") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-O",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-O",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-O",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-O",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-P") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-P",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-P",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-P",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-P",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-Q") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-Q",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-Q",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-Q",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-Q",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-R") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-R",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-R",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-R",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-R",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-S") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-S",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-S",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-S",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-S",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-T") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-T",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-T",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-T",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-T",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-U") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-U",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-U",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-U",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-U",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-V") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-V",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-V",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-V",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-V",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-W") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-W",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-W",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-W",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-W",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-X") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-X",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-X",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-X",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-X",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-Y") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-Y",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-Y",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-Y",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-Y",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-Z") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-Z",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-Z",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-Z",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-Z",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-a") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-a",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-a",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-a",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-a",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-b") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-b",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-b",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-b",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-b",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-c") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-c",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-c",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-c",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-c",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-d") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-d",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-d",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-d",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-d",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-e") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-e",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-e",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-e",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-e",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-f") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-f",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-f",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-f",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-f",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-g") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-g",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-g",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-g",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-g",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-h") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-h",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-h",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-h",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-h",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-i") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-i",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-i",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-i",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-i",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-j") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-j",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-j",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-j",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-j",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-k") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-k",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-k",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-k",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-k",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-l") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-l",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-l",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-l",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-l",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-m") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-m",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-m",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-n") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-o") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-o",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-o",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-p") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-p",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-p",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-q") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-q",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-q",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-q",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-q",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-r") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-r",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-r",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-r",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-r",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-s") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-s",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-s",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-t") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-t",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-t",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-t",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-t",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-u") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-u",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-u",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-u",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-u",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-v") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-v",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-v",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-v",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-v",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-w") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-w",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-w",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-x") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-x",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-x",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-x",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-x",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-y") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-y",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-y",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-y",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-y",
    },
  ],
]
`;

exports[`integration:constructs/initialOption > should tokenize short flag ("-z") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-z",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-z",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "-z",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-z",
    },
  ],
]
`;
